<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">


    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="100px"
        android:layout_marginTop="76px"
        android:layout_marginLeft="30px"
        android:layout_marginRight="30px"
        android:background="@android:color/transparent"
        android:drawableLeft="@mipmap/icon_edit_phone"
        android:drawablePadding="30px"
        android:gravity="center_vertical"
        android:hint="@string/forgetpass_name_null"
        android:maxLength="11"
        android:paddingRight="30px"
        android:textColor="@color/textColor"
        android:textColorHint="@color/editHint"
        android:textSize="28px" />


    <View style="@style/lineE2"
        android:layout_marginLeft="30px"
        android:layout_marginRight="30px"/>

    <EditText
        android:id="@+id/etPhone"
        android:layout_width="match_parent"
        android:layout_height="100px"
        android:layout_marginLeft="30px"
        android:layout_marginRight="30px"
        android:background="@android:color/transparent"
        android:drawableLeft="@mipmap/icon_edit_phone"
        android:drawablePadding="30px"
        android:gravity="center_vertical"
        android:hint="@string/login_hint_phone_null"
        android:inputType="phone"
        android:maxLength="11"
        android:paddingRight="30px"
        android:textColor="@color/textColor"
        android:textColorHint="@color/editHint"
        android:textSize="28px" />

    <View style="@style/lineE2"
        android:layout_marginLeft="30px"
        android:layout_marginRight="30px"/>


    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="100px"
        android:orientation="horizontal"
        android:layout_marginLeft="30px"
        android:layout_marginRight="30px">

        <EditText
            android:id="@+id/etCode"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:drawableLeft="@mipmap/icon_edit_code"
            android:drawablePadding="30px"
            android:gravity="center_vertical"
            android:hint="@string/forgetpass_code_null"
            android:maxLength="6"
            android:paddingRight="30px"
            android:textColor="@color/textColor"
            android:textColorHint="@color/editHint"
            android:textSize="28px" />

        <TextView
            android:id="@+id/btnCode"
            android:layout_width="200px"
            android:layout_height="match_parent"
            android:layout_marginTop="15px"
            android:layout_marginBottom="15px"
            android:gravity="center"
            android:textSize="28px"
            android:textColor="@drawable/color_theme_white"
            android:background="@drawable/btn_code"
            android:text="@string/btn_get_code"/>

    </com.zhy.autolayout.AutoLinearLayout>


    <View style="@style/lineE2"
        android:layout_marginLeft="30px"
        android:layout_marginRight="30px"/>

    <TextView
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        android:layout_height="88px"
        android:layout_marginLeft="30px"
        android:layout_marginRight="30px"
        android:layout_marginTop="116px"
        android:background="@drawable/btn_login"
        android:gravity="center"
        android:text="@string/register_next"
        android:textColor="@android:color/white"
        android:textSize="36px" />

</com.zhy.autolayout.AutoLinearLayout>