<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


    </com.zhy.autolayout.AutoLinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60px"
        android:layout_marginTop="60px"
        android:src="@mipmap/bg_logo" />


    <EditText
        android:id="@+id/etPhone"
        android:layout_width="match_parent"
        android:layout_height="100px"
        android:layout_marginLeft="30px"
        android:layout_marginRight="30px"
        android:background="@android:color/transparent"
        android:drawableLeft="@mipmap/icon_edit_phone"
        android:drawablePadding="30px"
        android:gravity="center_vertical"
        android:hint="@string/login_hint_phone_null"
        android:inputType="phone"
        android:maxLength="11"
        android:paddingRight="30px"
        android:textColor="@color/textColor"
        android:textColorHint="@color/editHint"
        android:textSize="28px" />

    <View
        style="@style/lineE2"
        android:layout_marginLeft="30px"
        android:layout_marginRight="30px" />


    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="100px"
        android:layout_marginLeft="30px"
        android:layout_marginRight="30px"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etPass"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:drawableLeft="@mipmap/icon_edit_pass"
            android:drawablePadding="30px"
            android:gravity="center_vertical"
            android:hint="@string/login_hint_pass_null"
            android:inputType="textPassword"
            android:maxLength="16"
            android:textColor="@color/textColor"
            android:textColorHint="@color/editHint"
            android:textSize="28px" />

        <CheckBox
            android:id="@+id/checkPass"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:button="@null"
            android:drawableLeft="@drawable/check_password"
            android:paddingLeft="30px" />

    </com.zhy.autolayout.AutoLinearLayout>

    <View
        style="@style/lineE2"
        android:layout_marginLeft="30px"
        android:layout_marginRight="30px" />


    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="88px"
        android:layout_marginLeft="30px"
        android:layout_marginRight="30px"
        android:gravity="center_vertical"
        android:orientation="horizontal">


        <CheckBox
            android:id="@+id/checkAuto"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:button="@null"
            android:drawableLeft="@drawable/check_auto_login"
            android:drawablePadding="14px"
            android:gravity="center"
            android:text="@string/login_auto_login"
            android:textColor="@color/textColor"
            android:textSize="28px" />


        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/btnForgetPass"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/login_btn_forget_pass"
            android:textColor="@color/themeColor"
            android:textSize="28px" />

    </com.zhy.autolayout.AutoLinearLayout>

    <TextView
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="88px"
        android:layout_marginLeft="30px"
        android:layout_marginRight="30px"
        android:layout_marginTop="30px"
        android:background="@drawable/btn_login"
        android:gravity="center"
        android:text="@string/login_btn_login"
        android:textColor="@android:color/white"
        android:textSize="36px" />

</com.zhy.autolayout.AutoLinearLayout>